atualiza links nos slides

--- a/slides/s4/04.tex
+++ b/slides/s4/04.tex
@@ -234,7 +234,7 @@ def validate_user_input(user_data):
 
 \vspace{0.1cm}
 \footnotesize
-\faGithub \, \href{https://github.com/fmarquesfilho/bpp-2025-2/}{Clique aqui} para ver exemplo completo.
+\faGithub \, \href{https://github.com/fmarquesfilho/bpp-2025-2/blob/main/src/s4/problema1.py}{Clique aqui} para ver exemplo completo.
 \end{frame}
 
 \section{Ferramentas de Detecção}
@@ -279,7 +279,7 @@ Código não utilizado\\
 \begin{alertblock}{Exemplo Prático - Aula de Hoje}
 \footnotesize
 \faCode \, Vamos analisar código real usando essas ferramentas! \\
-\faGithub \, Códigos em: \url{https://github.com/fmarquesfilho/bpp-2025-2/tree/main/exemplos/analise-pratica}
+\faGithub \, Códigos \href{https://github.com/fmarquesfilho/bpp-2025-2/blob/main/src/s4/}{aqui}.
 \end{alertblock}
 \end{frame}
 
@@ -346,10 +346,9 @@ class UserManager:
 \end{block}
 
 \vspace{0.3cm}
-\begin{alertblock}{Exemplos Completos}
+\begin{alertblock}{Exemplos}
 \footnotesize
-\faGithub \, Ver violações e soluções SOLID em: \\
-\url{https://github.com/fmarquesfilho/bpp-2025-2/tree/main/exemplos/solid}
+\faGithub \, Códigos \href{https://github.com/fmarquesfilho/bpp-2025-2/blob/main/src/s4/}{aqui}.
 \end{alertblock}
 \end{frame}
 
@@ -466,7 +465,7 @@ Priorize refatorações baseado no impacto e frequência de mudanças na área d
 
 \begin{block}{Tarefa 2: Análise com pylint}
 \footnotesize
-Analisar o arquivo \texttt{exemplos/analise-pratica/problema1.py} e identificar:
+Analisar o arquivo \texttt{src/s4/problema1.py} e identificar:
 \begin{itemize}
     \item Quais code smells foram detectados?
     \item Qual a pontuação do código?
@@ -476,7 +475,7 @@ Analisar o arquivo \texttt{exemplos/analise-pratica/problema1.py} e identificar:
 
 \begin{block}{Tarefa 3: Métricas de Complexidade}
 \footnotesize
-Usar radon para medir complexidade: \texttt{radon cc exemplos/analise-pratica/ -a}
+Usar radon para medir complexidade: \texttt{radon cc src/s4 -a}
 \end{block}
 \end{frame}
 
