atualiza links nos slides

--- a/slides/s4/04.tex
+++ b/slides/s4/04.tex
@@ -208,7 +208,7 @@ def process_user_registration(name, email, password, age):
 
 \vspace{0.1cm}
 \footnotesize
-\faGithub \, \href{https://github.com/fmarquesfilho/bpp-2025-2/}{Clique aqui} para ver exemplo completo.
+\faGithub \, \href{https://github.com/fmarquesfilho/bpp-2025-2/blob/main/src/s4/problema1.py}{Clique aqui} para ver exemplo completo.
 \end{frame}
 
 \begin{frame}[fragile]
@@ -234,7 +234,7 @@ def validate_user_input(user_data):
 
 \vspace{0.1cm}
 \footnotesize
-\faGithub \, \href{https://github.com/fmarquesfilho/bpp-2025-2/blob/main/src/s4/problema1.py}{Clique aqui} para ver exemplo completo.
+\faGithub \, \href{https://github.com/fmarquesfilho/bpp-2025-2/blob/main/src/s4/solucao1.py}{Clique aqui} para ver exemplo completo.
 \end{frame}
 
 \section{Ferramentas de Detecção}
@@ -279,7 +279,7 @@ Código não utilizado\\
 \begin{alertblock}{Exemplo Prático - Aula de Hoje}
 \footnotesize
 \faCode \, Vamos analisar código real usando essas ferramentas! \\
-\faGithub \, Códigos \href{https://github.com/fmarquesfilho/bpp-2025-2/blob/main/src/s4/}{aqui}.
+\faGithub \, \href{https://github.com/fmarquesfilho/bpp-2025-2/blob/main/src/s4/}{Códigos aqui}.
 \end{alertblock}
 \end{frame}
 
@@ -348,7 +348,7 @@ class UserManager:
 \vspace{0.3cm}
 \begin{alertblock}{Exemplos}
 \footnotesize
-\faGithub \, Códigos \href{https://github.com/fmarquesfilho/bpp-2025-2/blob/main/src/s4/}{aqui}.
+\faGithub \, \href{https://github.com/fmarquesfilho/bpp-2025-2/blob/main/src/s4/}{Códigos aqui}.
 \end{alertblock}
 \end{frame}
 
